Update Upcycling taller 5°.html

--- a/Upcycling taller 5°.html
+++ b/Upcycling taller 5°.html
@@ -460,7 +460,7 @@
                     <div class="ejemplo-item">
                         <div class="emoji">🍼</div>
                         <h3>Botellas → Lámparas</h3>
-                        <p>Haz lámparas decorativas con botellas de vidrio</p>
+                        <p>Haz lámparas decorativas con botellas de plastico</p>
                     </div>
                     <div class="ejemplo-item">
                         <div class="emoji">🧦</div>
