--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                 <h2><span>📝</span> ¡Ahora Practiquemos! - Taller</h2>
                 
                 <div class="actividad-taller">
-                    <h3><span>🎯</span> Actividad 1: Ideas de Transformación</h3>
+                    <h3><span>🎯</span> Actividad: Ideas de Transformación</h3>
                     <p>Observa los siguientes objetos que ya no se usan y propón una transformación creativa para cada uno:</p>
 
                     <div class="objeto-taller">
