--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@
 
             <!-- NUEVA SECCIÓN DE VIDEO -->
             <div class="seccion video">
-                <h2><span>🎥</span> Video Inspirador</h2>
-                <p>Mira este video para inspirarte con ideas creativas de upcycling:</p>
+                <h2><span>🎥</span> Video </h2>
+                <p>Mira este video que desarrolla ideas creativas de upcycling:</p>
                 <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/ogqx2n3cHU8" title="Video inspirador de Upcycling" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
